{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 121,
  "lineage": "a3156c08-6434-e2cf-7253-98a63d2542de",
  "resources": [
    {
      "module": "module.backend_nsg",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/networkInterfaces/mim-backend-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/publicIPAddresses/mim-backend-pip",
                "subnet_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/virtualNetworks/mim-vnet/subnets/mim-backend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-1E-52-75-31-39",
            "name": "mim-backend-nic",
            "network_security_group_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/networkSecurityGroups/mim-backend-nsg",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "mim-resource-group",
            "virtual_machine_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Compute/virtualMachines/mim-backend-vm"
          }
        }
      ]
    },
    {
      "module": "module.backend_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/networkSecurityGroups/mim-backend-nsg",
            "location": "westeurope",
            "name": "mim-backend-nsg",
            "resource_group_name": "mim-resource-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.backend_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/virtualNetworks/mim-vnet/subnets/mim-backend-subnet",
            "name": "mim-backend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mim-resource-group",
            "virtual_network_name": "mim-vnet"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.backend_vm",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/publicIPAddresses/mim-backend-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.180.164.83",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mim-backend-pip",
            "resource_group_name": "mim-resource-group",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "module": "module.backend_vm",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/virtualNetworks/mim-vnet/subnets/mim-backend-subnet",
            "name": "mim-backend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mim-resource-group",
            "virtual_network_name": "mim-vnet"
          }
        }
      ]
    },
    {
      "module": "module.backend_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/networkInterfaces/mim-backend-nic",
            "internal_domain_name_suffix": "4kxfpotgvayenfs1lgmuaavdva.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/publicIPAddresses/mim-backend-pip",
                "subnet_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/virtualNetworks/mim-vnet/subnets/mim-backend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-1E-52-75-31-39",
            "name": "mim-backend-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "mim-resource-group",
            "virtual_machine_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Compute/virtualMachines/mim-backend-vm"
          },
          "dependencies": [
            "module.backend_subnet.azurerm_subnet.subnet",
            "module.backend_vm.data.azurerm_public_ip.pip",
            "module.backend_vm.data.azurerm_subnet.subnet",
            "module.key_vault.azurerm_key_vault.kv",
            "module.key_vault.data.azurerm_client_config.current",
            "module.public_ip_backend.azurerm_public_ip.pip",
            "module.rg.azurerm_resource_group.rg",
            "module.vm_password.azurerm_key_vault_secret.secret",
            "module.vm_password.data.azurerm_key_vault.kv",
            "module.vm_username.azurerm_key_vault_secret.secret",
            "module.vm_username.data.azurerm_key_vault.kv",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_nsg",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/networkInterfaces/mim-frontend-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/publicIPAddresses/mim-frontend-pip",
                "subnet_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/virtualNetworks/mim-vnet/subnets/mim-frontend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-1E-52-11-7F-B8",
            "name": "mim-frontend-nic",
            "network_security_group_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/networkSecurityGroups/mim-frontend-nsg",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "mim-resource-group",
            "virtual_machine_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Compute/virtualMachines/mim-frontend-vm"
          }
        }
      ]
    },
    {
      "module": "module.frontend_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/networkSecurityGroups/mim-frontend-nsg",
            "location": "westeurope",
            "name": "mim-frontend-nsg",
            "resource_group_name": "mim-resource-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.frontend_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/virtualNetworks/mim-vnet/subnets/mim-frontend-subnet",
            "name": "mim-frontend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mim-resource-group",
            "virtual_network_name": "mim-vnet"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_vm",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/publicIPAddresses/mim-frontend-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.23.226.124",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mim-frontend-pip",
            "resource_group_name": "mim-resource-group",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "module": "module.frontend_vm",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/virtualNetworks/mim-vnet/subnets/mim-frontend-subnet",
            "name": "mim-frontend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mim-resource-group",
            "virtual_network_name": "mim-vnet"
          }
        }
      ]
    },
    {
      "module": "module.frontend_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/networkInterfaces/mim-frontend-nic",
            "internal_domain_name_suffix": "4kxfpotgvayenfs1lgmuaavdva.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/publicIPAddresses/mim-frontend-pip",
                "subnet_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/virtualNetworks/mim-vnet/subnets/mim-frontend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-1E-52-11-7F-B8",
            "name": "mim-frontend-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "mim-resource-group",
            "virtual_machine_id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Compute/virtualMachines/mim-frontend-vm"
          },
          "dependencies": [
            "module.frontend_subnet.azurerm_subnet.subnet",
            "module.frontend_vm.data.azurerm_public_ip.pip",
            "module.frontend_vm.data.azurerm_subnet.subnet",
            "module.key_vault.azurerm_key_vault.kv",
            "module.key_vault.data.azurerm_client_config.current",
            "module.public_ip_frontend.azurerm_public_ip.pip",
            "module.rg.azurerm_resource_group.rg",
            "module.vm_password.azurerm_key_vault_secret.secret",
            "module.vm_password.data.azurerm_key_vault.kv",
            "module.vm_username.azurerm_key_vault_secret.secret",
            "module.vm_username.data.azurerm_key_vault.kv",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.public_ip_backend",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/publicIPAddresses/mim-backend-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.180.164.83",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mim-backend-pip",
            "resource_group_name": "mim-resource-group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.public_ip_frontend",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/publicIPAddresses/mim-frontend-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.23.226.124",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mim-frontend-pip",
            "resource_group_name": "mim-resource-group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ba57aef2-a866-4630-965b-59994002a3a8",
            "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/virtualNetworks/mim-vnet",
            "location": "westeurope",
            "name": "mim-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "mim-resource-group",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/virtualNetworks/mim-vnet/subnets/mim-backend-subnet",
                "name": "mim-backend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/9c2d44b8-0b58-4481-8de2-41223a92f641/resourceGroups/mim-resource-group/providers/Microsoft.Network/virtualNetworks/mim-vnet/subnets/mim-frontend-subnet",
                "name": "mim-frontend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}